[gd_scene load_steps=16 format=3 uid="uid://bpuvhidwhw8e7"]

[ext_resource type="Texture2D" uid="uid://dsaqw2ia8ynyu" path="res://Assets/Images/Icon/icon (3).jpg" id="1_2enda"]
[ext_resource type="Script" path="res://Scripts/Scenes/Skill_tree.gd" id="1_k1t0j"]
[ext_resource type="Texture2D" uid="uid://dakow4iscqjnb" path="res://Assets/Images/Icon/icon (2).jpg" id="2_y335l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_413vf"]
bg_color = Color(0.39, 0.39, 0.39, 0.8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8j7q"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w4gt5"]
font_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vfiet"]
bg_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fr38"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdfmn"]
bg_color = Color(0.760203, 3.70607e-06, 4.81307e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyyw2"]
bg_color = Color(0.82, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cks06"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xi2ae"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3mak"]
bg_color = Color(0, 0.62, 0.434, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yij0k"]
bg_color = Color(0, 0.65, 0.455, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1861u"]
bg_color = Color(0, 0.708218, 0.499216, 1)

[node name="SkillTree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_k1t0j")

[node name="tree" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="space" type="MarginContainer" parent="tree"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="tree"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="tree/HBoxContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="tree"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="tree/HBoxContainer2"]
z_index = 1
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
fill_mode = 2
show_percentage = false

[node name="HBoxContainer3" type="HBoxContainer" parent="tree"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="tree/HBoxContainer3"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
fill_mode = 2
show_percentage = false

[node name="HBoxContainer4" type="HBoxContainer" parent="tree"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="tree/HBoxContainer4"]
z_index = 1
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
fill_mode = 2
show_percentage = false

[node name="tree2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.41
anchor_right = 0.5
anchor_bottom = 0.41
offset_left = -45.0
offset_top = -65.6
offset_right = 45.0
offset_bottom = 94.4
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="space" type="MarginContainer" parent="tree2"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="tree2"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="tree2"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/separation = 0

[node name="space" type="MarginContainer" parent="tree2/HBoxContainer2"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="tree2/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="tree2/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(10, 1)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="tree2/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="tree2/HBoxContainer2/VBoxContainer2"]
custom_minimum_size = Vector2(11, 1)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
show_percentage = false

[node name="HBoxContainer3" type="HBoxContainer" parent="tree2"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/separation = 0

[node name="space" type="MarginContainer" parent="tree2/HBoxContainer3"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="tree2/HBoxContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer3/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="tree2/HBoxContainer3/VBoxContainer"]
custom_minimum_size = Vector2(10, 1)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="tree2/HBoxContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer3/VBoxContainer2"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="tree2/HBoxContainer3/VBoxContainer2"]
custom_minimum_size = Vector2(11, 1)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
show_percentage = false

[node name="HBoxContainer4" type="HBoxContainer" parent="tree2"]
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
theme_override_constants/separation = 0

[node name="space" type="MarginContainer" parent="tree2/HBoxContainer4"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="tree2/HBoxContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer4/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="tree2/HBoxContainer4/VBoxContainer"]
custom_minimum_size = Vector2(10, 1)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="tree2/HBoxContainer4"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="tree2/HBoxContainer4/VBoxContainer2"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="tree2/HBoxContainer4/VBoxContainer2"]
custom_minimum_size = Vector2(11, 1)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_413vf")
theme_override_styles/fill = SubResource("StyleBoxFlat_s8j7q")
step = 1.0
show_percentage = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visibility_layer = 5
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "Skill Tree"
label_settings = SubResource("LabelSettings_w4gt5")

[node name="Space" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="step1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/step1"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="skill_0" type="TextureButton" parent="VBoxContainer/step1" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("1_2enda")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/step1"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="step2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="skill_1" type="TextureButton" parent="VBoxContainer/step2" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
texture_normal = ExtResource("2_y335l")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/step2"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="skill_2" type="TextureButton" parent="VBoxContainer/step2" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
texture_normal = ExtResource("1_2enda")
ignore_texture_size = true
stretch_mode = 0

[node name="step3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="skill_3" type="TextureButton" parent="VBoxContainer/step3" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
texture_normal = ExtResource("1_2enda")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/step3"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="skill_4" type="TextureButton" parent="VBoxContainer/step3" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
texture_normal = ExtResource("1_2enda")
ignore_texture_size = true
stretch_mode = 0

[node name="step4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="skill_5" type="TextureButton" parent="VBoxContainer/step4" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
texture_normal = ExtResource("1_2enda")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/step4"]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2

[node name="skill_6" type="TextureButton" parent="VBoxContainer/step4" groups=["btn_skill"]]
custom_minimum_size = Vector2(13, 13)
layout_mode = 2
texture_normal = ExtResource("1_2enda")
ignore_texture_size = true
stretch_mode = 0

[node name="Space2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="description" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/bold_italics_font_size = 5
theme_override_font_sizes/italics_font_size = 5
theme_override_font_sizes/mono_font_size = 5
theme_override_font_sizes/normal_font_size = 5
theme_override_font_sizes/bold_font_size = 5
theme_override_styles/normal = SubResource("StyleBoxFlat_vfiet")
bbcode_enabled = true
text = "Skill Description"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="no" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 6)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_0fr38")
theme_override_styles/hover = SubResource("StyleBoxFlat_pdfmn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tyyw2")
theme_override_styles/normal = SubResource("StyleBoxFlat_cks06")

[node name="yes" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 5)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_xi2ae")
theme_override_styles/hover = SubResource("StyleBoxFlat_f3mak")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yij0k")
theme_override_styles/normal = SubResource("StyleBoxFlat_1861u")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/yes" to="." method="_on_yes_pressed"]
